# Leviathan-VS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.bat  LEVIATHAN.bat  README.md  SECURITY.md  install.ps1  pyproject.toml
.github/: copilot-instructions.md
core/: .http_history.json  __init__.py  __version__.py  cache.py  cli.py  colors.py  config.json  config_schema.py  doctor.py  http_toolkit.py  mcp_launcher.py  mcp_server.py  translator.py
core/active_directory/: mcp_ad.py
core/adb/: mcp_adb.py
core/adv_recon/: mcp_adv_recon.py
core/api_security/: __init__.py  mcp_api_security.py
core/cloud/: mcp_cloud.py
core/container/: mcp_container.py
core/exploit/: mcp_exploit.py
core/exploit_dev/: mcp_exploit_dev.py
core/forensics/: mcp_forensics.py
core/ghidra/: mcp_ghidra.py
core/hashcat/: mcp_hashcat.py
core/iac/: mcp_iac.py
core/jadx/: mcp_jadx.py
core/netattack/: mcp_netattack.py
core/nuclei/: mcp_nuclei.py
core/osint/: mcp_osint.py
core/r2/: mcp_r2.py
core/recon/: mcp_recon.py
core/redteam/: mcp_redteam.py
core/reveng/: mcp_reveng.py
core/secrets/: mcp_secrets.py
core/shannon/: __init__.py  agents.py  auth_engine.py  crypto.py  engine.py  exploits.py  mcp_shannon.py  models.py  orchestrator.py  pipeline.py  reporter.py  workspace.py
core/social_eng/: mcp_social_eng.py
core/stego/: mcp_stego.py
core/tunneling/: mcp_tunneling.py
core/webapp/: mcp_webapp.py
core/wireless/: mcp_wireless.py
core/wireshark/: mcp_wireshark.py
core/wordlist/: mcp_wordlist.py
docs/: CLAUDE_SKILLS.md  TASKS.md  TOOLS.md
tests/: test_http_and_cache.py  test_mcp_plugin_base.py  test_translator.py
