[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "leviathan-vs"
version = "66.6.0"
description = "☠️ LEVIATHAN VS — Arsenal ofensivo Classification OMEGA-BLACK para VS Code — 49 MCP servers, 704+ ferramentas, 640+ regras de evasao semantica, 15 dominios de ataque, 14 taticas MITRE ATT&CK, IA cognitiva militar-grade. Kill Chain: FULL. Evasion: 96.3%. The Abyss Engine."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ThiagoFrag", email = "thiago@leviathan.abyss"}]
keywords = [
    "vscode", "security", "pentesting", "mcp", "offensive-security",
    "reverse-engineering", "exploit-development", "red-team", "bug-bounty",
    "vulnerability-research", "malware-analysis", "osint", "forensics",
    "mobile-security", "web-security", "network-security", "active-directory",
    "wireless-security", "social-engineering", "cloud-security",
    "mitre-attack", "kill-chain", "cyber-security", "penetration-testing",
    "binary-analysis", "threat-intelligence", "incident-response",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
]
dependencies = [
    "aiohttp>=3.8",
    "colorama>=0.4",
    "rich>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = [
    "requests>=2.28",
    "httpx>=0.24",
]

[project.scripts]
leviathan = "core.cli:main"

[project.urls]
Repository = "https://github.com/ThiagoFrag/Leviathan-VS"
Documentation = "https://github.com/ThiagoFrag/Leviathan-VS/tree/main/docs"
Changelog = "https://github.com/ThiagoFrag/Leviathan-VS/blob/main/CHANGELOG.md"
Security = "https://github.com/ThiagoFrag/Leviathan-VS/blob/main/SECURITY.md"

# ════════════════════════════════════════════════════════════════════════════
# TOOL CONFIGURATION — MILITARY GRADE
# ════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["core", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled per-file)
    "B011",  # do not assert False
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core"]
omit = ["core/*/mcp_*.py", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
